# EdusScrapperLibrary

./: .gitignore  Backend.cpp  Backend.h  CMakeLists.txt  library.h  scrapper.cpp  scrapper.h
include/: Backend.h  library.h  scrapper.h
src/: Backend.cpp  scrapper.cpp
